# DSImplC

./: .gitignore  README.md
Arrays/Dynamic/src/: CMakeLists.txt  exec_program.c
Arrays/Dynamic/src/dynamic_array/: dynamic_array.c
Arrays/Dynamic/src/dynamic_array/include/: dynamic_array.h
Arrays/DynamicArray/: CMakeLists.txt
Arrays/DynamicArray/src/: dynamic_array.c
Arrays/DynamicArray/test/: CMakeLists.txt
Arrays/Static/src/: exec_program.c
Arrays/Static/src/static_array/: static_array.c
Arrays/StaticArray/: CMakeLists.txt  CMakePresets.json
Arrays/StaticArray/src/: CMakeLists.txt  static_array.c
Arrays/StaticArray/src/include/: static_array.h
Arrays/StaticArray/test/: CMakeLists.txt  io_tests.c
Arrays/StaticArray/tests/: CMakeLists.txt  insertion_tests.cpp
DynamicArray/src/: CMakeLists.txt  dynamic_array.c  exec_program.c
DynamicArray/src/dynamic_array/: CMakeLists.txt  dynamic_array.c
DynamicArray/src/dynamic_array/include/: dynamic_array.h
DynamicArray/src/include/: dynamic_array.h
DynamicArray/test/: insertion_tests.cpp  io_tests.c
LinkedList/: .clang-tidy  CMakeLists.txt
LinkedList/src/: CMakeLists.txt  linked_list.c  run_program.c
LinkedList/src/include/: linked_list.h
LinkedList/src/linked_list/: linked_list.c
LinkedList/test/: CMakeLists.txt  io_tests.c  main.c  sloppy_tests.c
LinkedList/test/include/: io_tests.h  sloppy_tests.h
LinkedLists/CircularList/: CMakeLists.txt
LinkedLists/CircularList/src/: CMakeLists.txt  circular_list.c
LinkedLists/CircularList/src/include/: circular_list.h
LinkedLists/CircularList/test/: CMakeLists.txt  insertion_tests.cpp  io_tests.c
LinkedLists/CircularList/tests/: io_tests.c
LinkedLists/DoublyList/: CMakeLists.txt
LinkedLists/DoublyList/src/: CMakeLists.txt  doubly_list.c
LinkedLists/DoublyList/src/include/: doubly_list.h
LinkedLists/DoublyList/tests/: CMakeLists.txt  deletion_tests.cpp  insertion_tests.cpp  io_tests.c
LinkedLists/SimpleLinkedList/src/: CMakeLists.txt  linked_list.c
LinkedLists/SimpleLinkedList/test/: io_tests.c
LinkedLists/SimpleList/: CMakeLists.txt
LinkedLists/SimpleList/src/: linked_list.c
LinkedLists/SimpleList/src/include/: linked_list.h
LinkedLists/SimpleList/test/: insertion_tests.cpp  io_tests.c
LinkedLists/SimpleList/tests/: CMakeLists.txt  insertion_tests.cpp
LinkedLists/UnrolledList/: CMakeLists.txt  CMakePresets.json
LinkedLists/UnrolledList/src/: CMakeLists.txt  unrolled_list.c
LinkedLists/UnrolledList/src/circular_list/: CMakeLists.txt
LinkedLists/UnrolledList/src/circular_list/include/: circular_list.h
LinkedLists/UnrolledList/src/include/: unrolled_list.h
LinkedLists/UnrolledList/tests/: CMakeLists.txt  insertion_tests.cpp  io_tests.c
LinkedLists/XORList/: .clang-format  CMakeLists.txt
LinkedLists/XORList/src/: CMakeLists.txt  xor_list.c
LinkedLists/XORList/src/include/: xor_list.h
LinkedLists/XORList/tests/: insertion_tests.cpp  io_tests.c
Stack/: CMakeLists.txt
Stack/src/: CMakeLists.txt  exec_program.c  stack.c
Stack/src/include/: stack.h
Stack/src/stack/: CMakeLists.txt  stack.c
Stack/src/stack/include/: stack.h
Stack/test/: CMakeLists.txt  io_tests.c  push_tests.cpp
StaticArray/: CMakeLists.txt
StaticArray/src/: CMakeLists.txt  exec_program.c  static_array.c
StaticArray/src/include/: static_array.h
StaticArray/src/static_array/: CMakeLists.txt  static_array.c
StaticArray/src/static_array/include/: static_array.h
StaticArray/test/: insertion_tests.cpp  io_tests.c
